# VocalSeparation-ComfyUI

./: README.md  __init__.py  pyproject.toml  requirements.txt
mss/: utils.py
mss/models/bandit/core/: __init__.py
mss/models/bs_roformer/: __init__.py  bs_roformer.py  mel_band_roformer.py
mss/models/scnet_unofficial/: __init__.py  scnet.py
